--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,6 +5,14 @@ permalink: /teaching/
 author_profile: true
 ---
 
+### Table 1
+
+| Entry            | Item   |                                                              |
+| --------         | ------ | ------------------------------------------------------------ |
+| [John Doe](#)    | 2016   | Description of the item in the list                          |
+| [Jane Doe](#)    | 2019   | Description of the item in the list                          |
+| [Doe Doe](#)     | 2022   | Description of the item in the list                          |
+
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
