--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,12 +5,29 @@ permalink: /talks/
 author_profile: true
 ---
 
-{% if site.talkmap_link == true %}
+Real Analysis
+======
 
-<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
+Probability
+======
 
-{% endif %}
+Stochastic Process
+======
 
-{% for post in site.talks reversed %}
-  {% include archive-single-talk.html %}
-{% endfor %}
+Optimization
+======
+
+Game Theory
+======
+
+Statistics
+======
+
+Bayesian Statistics
+======
+
+Reliability
+======
+
+Operations Management
+======
