--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,29 +5,28 @@ permalink: /talks/
 author_profile: true
 ---
 
-Real Analysis
-======
+## Real Analysis
+### 
 
-Probability
-======
+## Probability
 
-Stochastic Process
-======
 
-Optimization
-======
+## Stochastic Process
 
-Game Theory
-======
 
-Statistics
-======
+## Optimization
+### <i>introduction to linear optimization</i> by Dimitris Bertsimas and John N. Tsitsiklis
 
-Bayesian Statistics
-======
+## Game Theory
 
-Reliability
-======
 
-Operations Management
-======
+## Statistics
+
+
+## Bayesian Statistics
+
+
+## Reliability
+
+
+## Operations Management
