--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -7,6 +7,8 @@ redirect_from:
   - /wordpress/blog-posts/
 ---
 
+<h2 id="{{ year | slugify }}" class="archive__subtitle">{2023}</h2>
+
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
 {% for post in site.posts %}
