--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -7,15 +7,6 @@ redirect_from:
   - /wordpress/blog-posts/
 ---
 
-<h2 id="{{ year | slugify }}" class="archive__subtitle">{2023}</h2>
-
-{% include base_path %}
-{% capture written_year %}'None'{% endcapture %}
-{% for post in site.posts %}
-  {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
-  {% if year != written_year %}
-    <h2 id="{{ year | slugify }}" class="archive__subtitle">{{ year }}</h2>
-    {% capture written_year %}{{ year }}{% endcapture %}
-  {% endif %}
-  {% include archive-single.html %}
-{% endfor %}
+<h2 id="{{ year | slugify }}" class="archive__subtitle">2023</h2>
+<p></p>
+<p>2023-03-19，学生作品《双碳背景下车联网服务市场调查及未来发展建议研究》获得正大杯第 13 届全国大学生市场调查与分析大赛校一等奖</p>
