--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -9,4 +9,8 @@ redirect_from:
 
 <h2 id="{{ year | slugify }}" class="archive__subtitle">2023</h2>
 <p>`2023-11-15`，学生作品《创疗“e”金——医疗科技创新与专利共享金融平台》获得2023年工行杯全国大学生金融科技创新大赛省赛优秀奖</p>
+<p>`2023-10-12`，文章《The impact of gamma usage processes on preventive maintenance policies under two-dimensional warranty》被期刊<i>Reliability Engineering & System Safety</i>接收</p>
 <p>`2023-03-19`，学生作品《双碳背景下车联网服务市场调查及未来发展建议研究》获得正大杯第 13 届全国大学生市场调查与分析大赛校赛一等奖</p>
+
+<h2 id="{{ year | slugify }}" class="archive__subtitle">2022</h2>
+<p>`2023-07-13`，文章《A new cost-sharing preventive maintenance program under two-dimensional warranty》被期刊<i>International Journal of Production Economics</i>接收</p>
