--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -15,4 +15,4 @@ redirect_from:
 <h2 id="{{ year | slugify }}" class="archive__subtitle">2022</h2>
 <p>`2022-10-13`，成为长沙理工大学经济与管理学院数字经济系的一名专任教师</p>
 <p>`2022-07-13`，个人文章《A new cost-sharing preventive maintenance program under two-dimensional warranty》被期刊<i>International Journal of Production Economics</i>接收</p>
-<p>`2022-05-26`，博士论文《二维质保下预防性维护策略设计与优化》通过正式答辩<img src='..\images\aper.jpg' /></p>
+<p>`2022-05-26`，博士论文《二维质保下预防性维护策略设计与优化》通过正式答辩<img src='..\images\paper.jpg' /></p>
