--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -8,7 +8,7 @@ redirect_from:
 ---
 
 <h2 id="{{ year | slugify }}" class="archive__subtitle">2023</h2>
-<p>`2023-12-25`，终于获得讲师职称 <img src='..\images\csust.jpg' height='25' width='25' /></p>
+<p>`2023-12-25`，终于评上讲师，获得中级职称 <img src='..\images\csust.jpg' height='25' width='25' /></p>
 <p>`2023-11-15`，学生作品《创疗“e”金——医疗科技创新与专利共享金融平台》获得2023年工行杯全国大学生金融科技创新大赛省赛优秀奖 <img src='..\images\medal.jpg' height='23' width='23' /></p>
 <p>`2023-10-12`，个人文章《The impact of gamma usage processes on preventive maintenance policies under two-dimensional warranty》被期刊<i>Reliability Engineering & System Safety</i>接收 <img src='..\images\paper.jpg' height='24' width='24' /></p>
 <p>`2023-03-19`，学生作品《双碳背景下车联网服务市场调查及未来发展建议研究》获得正大杯第 13 届全国大学生市场调查与分析大赛校赛一等奖 <img src='..\images\medal.jpg' height='23' width='23' /></p>
