--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -6,6 +6,7 @@ author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
 ---
+<h2 id="{{ year | slugify }}" class="archive__subtitle">2024</h2>
 
 <h2 id="{{ year | slugify }}" class="archive__subtitle">2023</h2>
 <p>`2023-12-25`，终于评上讲师，获得中级职称 <img src='..\images\csust.jpg' height='24' width='24' /></p>
