--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -10,11 +10,11 @@ redirect_from:
 <p>`2024-03-11`，立项湖南省自然科学基金青年项目，5万 <img src='..\images\csust.jpg' height='24' width='24' /></p>
 
 <h2 id="{{ year | slugify }}" class="archive__subtitle">2023</h2>
-<p>`2023-12-25`，终于评上讲师，获得中级职称 <img src='..\images\csust.jpg' height='24' width='24' /></p>
-<p>`2023-10-12`，个人文章《The impact of gamma usage processes on preventive maintenance policies under two-dimensional warranty》被期刊<i>Reliability Engineering & System Safety</i>接收 <img src='..\images\paper.jpg' height='24' width='24' /></p>
+<p>`2023-12-25`，评上讲师，获得中级职称 <img src='..\images\csust.jpg' height='24' width='24' /></p>
+<p>`2023-10-12`，论文《The impact of gamma usage processes on preventive maintenance policies under two-dimensional warranty》被期刊<i>Reliability Engineering & System Safety</i>接收 <img src='..\images\paper.jpg' height='24' width='24' /></p>
 
 <h2 id="{{ year | slugify }}" class="archive__subtitle">2022</h2>
-<p>`2022-10-13`，荣幸成为长沙理工大学经济与管理学院数字经济系的一名专任教师 <img src='..\images\csust.jpg' height='24' width='24' /></p>
-<p>`2022-07-13`，个人文章《A new cost-sharing preventive maintenance program under two-dimensional warranty》被期刊<i>International Journal of Production Economics</i>接收 <img src='..\images\paper.jpg' height='24' width='24' /></p>
+<p>`2022-10-13`，成为长沙理工大学经济与管理学院数字经济系的一名专任教师 <img src='..\images\csust.jpg' height='24' width='24' /></p>
+<p>`2022-07-13`，论文《A new cost-sharing preventive maintenance program under two-dimensional warranty》被期刊<i>International Journal of Production Economics</i>接收 <img src='..\images\paper.jpg' height='24' width='24' /></p>
 <p>`2022-05-26`，博士论文《二维质保下预防性维护策略设计与优化》顺利通过正式答辩 <img src='..\images\paper.jpg' height='24' width='24' /></p>
-<p>`2022-03-31`，荣幸被评为2022届上海交通大学优秀毕业生 <img src='..\images\medal.jpg' height='23' width='23' /></p>
+<p>`2022-03-31`，被评为2022届上海交通大学优秀毕业生 <img src='..\images\medal.jpg' height='23' width='23' /></p>
