--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -7,6 +7,7 @@ redirect_from:
   - /wordpress/blog-posts/
 ---
 <h2 id="{{ year | slugify }}" class="archive__subtitle">2024</h2>
+<p>`2024-10-29`，获得硕士生导师资格 <img src='..\images\csust.jpg' height='24' width='24' /></p>
 <p>`2024-05-31`，评上讲师，获得中级职称 <img src='..\images\csust.jpg' height='24' width='24' /></p>
 <p>`2024-03-11`，立项湖南省自然科学基金青年项目，5万 <img src='..\images\csust.jpg' height='24' width='24' /></p>
 
