--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -8,6 +8,7 @@ redirect_from:
 ---
 <h2 id="{{ year | slugify }}" class="archive__subtitle">2024</h2>
 <p>`2024-11-12`，通过入编面试 <img src='..\images\csust.jpg' height='24' width='24' /></p>
+<p>`2024-11-11`，指导学生获得2024年全国高校商业精英挑战赛创新创业竞赛全国二等奖<img src='..\images\medal.jpg' height='23' width='23' /></p>
 <p>`2024-09-13`，获得硕士生导师资格 <img src='..\images\csust.jpg' height='24' width='24' /></p>
 <p>`2024-05-31`，评上讲师，获得中级职称 <img src='..\images\csust.jpg' height='24' width='24' /></p>
 <p>`2024-03-11`，立项湖南省自然科学基金青年项目，5万 <img src='..\images\csust.jpg' height='24' width='24' /></p>
