--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -7,6 +7,7 @@ redirect_from:
   - /wordpress/blog-posts/
 ---
 <h2 id="{{ year | slugify }}" class="archive__subtitle">2024</h2>
+<p>`2023-10-12`，论文《Extended warranty pricing in a competitive aftermarket under Logit demand》被期刊<i>European Journal of Operational Research</i>接收 <img src='..\images\paper.jpg' height='24' width='24' /></p>
 <p>`2024-04-01`，入编 <img src='..\images\csust.jpg' height='24' width='24' /></p>
 
 <h2 id="{{ year | slugify }}" class="archive__subtitle">2024</h2>
