--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -7,6 +7,7 @@ redirect_from:
   - /wordpress/blog-posts/
 ---
 <h2 id="{{ year | slugify }}" class="archive__subtitle">2025</h2>
+<p>`2025-09-08`，欢迎我的第一位硕士生胡泽祺同学 <img src='..\images\csust.jpg' height='24' width='24' /></p>
 <p>`2025-04-01`，论文《Extended warranty pricing in a competitive aftermarket under Logit demand》被期刊<i>European Journal of Operational Research</i>接收 <img src='..\images\paper.jpg' height='24' width='24' /></p>
 <p>`2025-04-01`，入编 <img src='..\images\csust.jpg' height='24' width='24' /></p>
 
