--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -10,3 +10,8 @@ author_profile: true
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+
+## 在读学生
+* 胡泽祺（2025级）
+
+## 已毕业学生
