--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -11,7 +11,7 @@ author_profile: true
   {% include archive-single.html %}
 {% endfor %}
 
-<h1>在读学生</h2>
+<h1>Current students</h2>
 <p>胡泽祺（2025级）</p>
 
-<h1>已毕业学生</h2>
+<h1>Former students</h2>
