Update student information in teaching page

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -12,6 +12,8 @@ author_profile: true
 {% endfor %}
 
 <h1>Current students</h2>
-<p>胡泽祺（2025级）</p>
+<p>胡泽祺（2025级硕士生）</p>
+<p>刘承卓（2025级本科生）</p>
+<p>郭柏宏（2025级本科生）</p>
 
 <h1>Former students</h2>
