Update year-archive.html with 2025 events
Added entries for significant events in 2025.

--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -7,6 +7,7 @@ redirect_from:
   - /wordpress/blog-posts/
 ---
 <h2 id="{{ year | slugify }}" class="archive__subtitle">2025</h2>
+<p>`2025-12-18`，论文《Unraveling the causal mechanisms behind moral hazard in China's Auto Industry》被期刊<i>Journal of Systems Science and Systems Engineering</i>接收 <img src='..\images\paper.jpg' height='24' width='24' /></p>
 <p>`2025-11-26`，光荣成为一名共产党员 <img src='..\images\csust.jpg' height='24' width='24' /></p>
 <p>`2025-04-01`，论文《Extended warranty pricing in a competitive aftermarket under Logit demand》被期刊<i>European Journal of Operational Research</i>接收 <img src='..\images\paper.jpg' height='24' width='24' /></p>
 <p>`2025-04-01`，入编 <img src='..\images\csust.jpg' height='24' width='24' /></p>
