--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -6,6 +6,8 @@ author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
 ---
+<h2 id="{{ year | slugify }}" class="archive__subtitle">2026</h2>
+
 <h2 id="{{ year | slugify }}" class="archive__subtitle">2025</h2>
 <p>`2025-12-18`，论文《Unraveling the causal mechanisms behind moral hazard in China's Auto Industry》被期刊<i>Journal of Systems Science and Systems Engineering</i>接收 <img src='..\images\paper.jpg' height='24' width='24' /></p>
 <p>`2025-11-26`，光荣成为一名共产党员 <img src='..\images\csust.jpg' height='24' width='24' /></p>
